@@ -6,7 +6,18 @@ Version ?.?.? (tzdata v?????) - ??????????
   Previously the TimeOrDateTime passed in would be converted to its original
   form and then <=> would be called recursively. This could create a 
   temporary TimeOrDateTime to be converted that would subsequently be 
-  discarded.
+  discarded. This change brings the performance of Timezone.local_to_utc
+  and Timezone.period_for_local back to the level it was at in 0.1.2. Thanks to
+  Michael Smedberg for reporting these performance issues.
+* Fix the condition that is tested by TimezonePeriodList.periods_for_local to
+  avoid iterating back through the Timezone periods once all the possible 
+  periods have been found. The condition was only being evaluated for cases 
+  where multiple periods were defined in one half of the year. This change 
+  improves the performance of Timezone.local_to_utc and 
+  Timezone.period_for_local to the same level as Timezone.utc_to_local and
+  Timezone.period_for_utc. Thanks to Michael Smedberg for reporting these 
+  performance issues.
+
 
 Version 0.2.0 (tzdata v2006c) - 3-Apr-2006
 ------------------------------------------
